tests/ui/struct_flatten.stderr
error: `flatten` is usable only with single-typed tuple variants
  --> $DIR/struct_flatten.rs:14:5
   |
14 |     #[structopt(flatten)]
   |     ^
